--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<script type="text/javascript">
 		alert('本地仓库提交')
 		alert('第二次提交')
-		alert('远程服务器编辑的代码')
+		alert('远程服务器编辑的代码');
+		alert('NicoleGaoyuan');
 	</script>
 </body>
 </html>
